@startuml
left to right direction
class Personaje{
+nombre : str
+fuerza : Float 
+inteligencia: Float
+defensa: Float
+vida: Float 
+nivel: int
+esta_vivo:bool
+atributos()
+subir_nivel()
+morir()
+daño()
+atacar()
+cambiar_arma()
+usar_habilidad()
}
class Guerrero{
+ espada: Float
}
class Arquero{
+ critico: Float
}
class Mago{
+libro: Float
}
class Mundo{
+PTR: Level:
+ULT: Level
+add_level()
+start()
}
class Level{
+ actions: List[str]
+ info: str
+ next: Level
+ player: Personaje
+ banco: List[Pregunta]
+ enter()
+ combate()
+ notificar()
}
class Enemigo{
+fail:int
}
class abc.ABC{
}
class Dragon{
+charging: bool
+multiplicador: int
}
class IceDragon{
}
class ElectricDragon{
}
class Pregunta{
+ enunciado: str
+opciones: List[str]
+correcta: int
+bono: int
+hacer()
}
class Room{
+left_path()
+right_path()
}
Mundo o-- Level
Level --|> abc.ABC
Room --|> Level
Personaje <|-- Dragon
Guerrero --|> Personaje
Enemigo --|> Personaje
Mago --|> Personaje
Arquero --|> Personaje
Personaje--o Room
Pregunta --o Level
Dragon<|--ElectricDragon
Dragon<|--IceDragon
@enduml